--- a/client/index.html
+++ b/client/index.html
@@ -13,5 +13,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "a2bb50faa66744f58c609c52b744a07d"}'></script><!-- End Cloudflare Web Analytics -->
   </body>
 </html>
